# news_recommendation_site

./: .gitignore  app.py  config.py  create_model.py  forms.py  models.py  pyproject.toml
dataset/: work_with_dataset.ipynb
dataset/.ipynb_checkpoints/: work_with_dataset-checkpoint.ipynb
instance/: site.db
static/: style.css
templates/: base.html  home.html  login.html  register.html
