[tool.poetry]
name = "flask-news"
version = "0.1.0"
description = ""
authors = ["Izlaster"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
flask-sqlalchemy = "^3.1.1"
email-validator = "^2.2.0"
flask-migrate = "^4.0.7"
pandas = "^2.2.3"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
